envs/dev/platform/k8s/policies/release-hygiene/04-require-resources-enforce.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-demo
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: require-resources
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - demo-app
    validate:
      message: "CPU and memory requests and limits are required for all containers."
      pattern:
        spec:
          containers:
          - resources:
              requests:
                cpu: "?*"
                memory: "?*"
              limits:
                cpu: "?*"
                memory: "?*"
